--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-WHATSAPP_NUMBER=+916200732421
-GEMINI_API_KEY=AIzaSyDUxJeZu7kuxsodoIN6nFcPRudyKWQ8EfA
+WHATSAPP_NUMBER=+91620073XXXX
+GEMINI_API_KEY=AIzaSyDUxJeZu7kux****IN6nFcPRudyKWQ8EfA
